Bug 1634619 - Back out focusable state changes on overflow events. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D74487